ndb - bug#42254 - make sure buffers are allocated correctly in ndbmtd