storage/ndb/src/kernel/main.cpp
@@ -273,11 +273,33 @@ init_global_memory_manager(EmulatorData &ed, Uint32 *watchCounter)
     ed.m_mem_manager->set_resource_limit(rl);
   }
 
-  if (shared_mem + tupmem + filepages)
+  Uint32 jbpages = compute_jb_pages(&ed);;
+  if (jbpages)
+  {
+    Resource_limit rl;
+    rl.m_min = jbpages;
+    rl.m_max = jbpages;
+    rl.m_resource_id = RG_JOBBUFFER;
+    ed.m_mem_manager->set_resource_limit(rl);
+  }
+
+  Uint32 sbpages = 0;
+  if (globalTransporterRegistry.get_using_default_send_buffer() == false)
+  {
+    Uint64 mem = globalTransporterRegistry.get_total_max_send_buffer();
+    sbpages = (mem + GLOBAL_PAGE_SIZE - 1) / GLOBAL_PAGE_SIZE;
+    Resource_limit rl;
+    rl.m_min = sbpages;
+    rl.m_max = sbpages;
+    rl.m_resource_id = RG_TRANSPORTER_BUFFERS;
+    ed.m_mem_manager->set_resource_limit(rl);
+  }
+
+  if (shared_mem + tupmem + filepages + jbpages + sbpages)
   {
     Resource_limit rl;
     rl.m_min = 0;
-    rl.m_max = shared_mem + tupmem + filepages;
+    rl.m_max = shared_mem + tupmem + filepages + jbpages + sbpages;
     rl.m_resource_id = 0;
     ed.m_mem_manager->set_resource_limit(rl);
   }
@@ -575,6 +597,9 @@ int main(int argc, char** argv)
   
   NdbThread* pWatchdog = globalEmulatorData.theWatchDog->doStart();
 
+  if (get_multithreaded_config(globalEmulatorData))
+    return -1;
+
   {
     /*
      * Memory allocation can take a long time for large memory.
@@ -588,9 +613,6 @@ int main(int argc, char** argv)
       return 1;
     globalEmulatorData.theWatchDog->unregisterWatchedThread(0);
   }
-
-  if (get_multithreaded_config(globalEmulatorData))
-    return -1;
 
   globalEmulatorData.theThreadConfig->init(&globalEmulatorData);
   
